--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,600&family=Roboto:wght@500&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,600&family=Poppins&family=Reem+Kufi:wght@400;500;600;700&family=Roboto:wght@500&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -34,18 +36,61 @@ Nav{
 .home-section{
   height: 92dvh;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
 }
 
-.home-section div{
+.home-section>div{
   width: 40%;
   margin-top: 2rem;
 }
 
 .home-image img{
   width: 80%;
+}
+
+.home-text{
+  font-family: 'Poppins', sans-serif;
+}
+
+.home-buttons{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.button-87 {
+  margin: 0.8rem;
+  padding: 1rem 2rem;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 0.8rem;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  text-decoration: none;
+}
+
+.button-87:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-87:active {
+  transform: scale(0.95);
 }
 
 /* mobiles  */
@@ -55,18 +100,32 @@ Nav{
     height: 92dvh;
     display: flex;
     flex-direction: column-reverse;
-    justify-content: space-around;
+    justify-content: start;
     align-items: center;
   }
  
   .home-section div{
     width: 80%;
     height: 33dvh;
-    margin-top: 2rem;
   }
   
   .home-image img{
     order: 1;
+  }
+
+  .home-buttons{
+  display: flex;
+  width: 100%;
+  height: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+  .button-87{
+    padding: 0.5rem 0.5rem;
+    height: 2rem;
+    margin: 0;
+    font-size: 0.8rem;
   }
 
 }
