--- a/src/App.css
+++ b/src/App.css
@@ -113,8 +113,18 @@ Nav{
   align-items: center;
   justify-content: space-around;
   padding-top: 5rem;
-  height: 100dvh;
   text-align: center;
+  width: 80%;
+}
+
+.about-page>div{
+  display: flex;
+  width: 40%;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-image-section img{
   width: 80%;
 }
 
@@ -142,6 +152,14 @@ Nav{
   .about-image-section img{
     width: 80%;
   }
+
+  .about-page>div{
+  display: flex;
+  width: 90%;
+  margin-top: 2rem;
+  justify-content: center;
+  align-items: center;
+}
 
   .home-buttons{
   display: flex;
